src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
	* {
		outline: none;
		scrollbar-width: thin;
		scrollbar-color: rgb(var(--ctp-overlay0)) rgb(var(--ctp-base));
	}
	
	::-webkit-scrollbar {
		@apply w-1 bg-base rounded-full;
	}
	 
	::-webkit-scrollbar-thumb {
		@apply bg-overlay0 rounded-full;
	}

	::-webkit-scrollbar-corner {
		display: none;
	}

	::-webkit-scrollbar-button {
		display: none;
	}

	@font-face {
		font-family: "SourceCodePro";
		src: local("SourceCodePro"), url("/SourceCodePro.ttf");
	}

	a {
		@apply focus:underline focus:text-mauve hover:underline hover:text-mauve transition-colors duration-150;
	}
}

